# mini-jc

./: Cargo.toml  README.md
src/: main.rs
src/parsers/: df.rs  free.rs  mod.rs
test-cases/df/: human.txt  inodes.txt  no-args.txt  output-all.txt  posix.txt  si.txt  total.txt  type.txt
test-cases/free/: human-si.txt  human.txt  no-args.txt  total.txt  wide.txt
